deleted:    logfiles/spark_operation.log.1 	new file:   logfiles/spark_operation.log1 	modified:   "\343\202\273\343\202\257\343\202\267\343\203\247\343\203\2633.ipynb" 	modified:   "\343\202\273\343\202\257\343\202\267\343\203\247\343\203\2634.ipynb" 	modified:   "\343\202\273\343\202\257\343\202\267\343\203\247\343\203\2635.ipynb" 	modified:   "\343\202\273\343\202\257\343\202\267\343\203\247\343\203\2636.ipynb"

--- a/セクション5.ipynb
+++ b/セクション5.ipynb
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,9 +50,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Warning: Ignoring non-Spark config property: hive.exec.dynamic.partition.mode\n",
+      "Warning: Ignoring non-Spark config property: hive.exec.dynamic.partition\n",
+      "Your hostname, yukisaitos-MacBook-Pro.local resolves to a loopback address: 127.0.0.1; using 192.168.0.30 instead (on interface en0)\n",
+      "Set SPARK_LOCAL_IP if you need to bind to another address\n",
+      "WARNING: An illegal reflective access operation has occurred\n",
+      "WARNING: Illegal reflective access by org.apache.spark.unsafe.Platform (file:/opt/homebrew/Cellar/apache-spark/3.2.0/libexec/jars/spark-unsafe_2.12-3.2.0.jar) to constructor java.nio.DirectByteBuffer(long,int)\n",
+      "WARNING: Please consider reporting this to the maintainers of org.apache.spark.unsafe.Platform\n",
+      "WARNING: Use --illegal-access=warn to enable warnings of further illegal reflective access operations\n",
+      "WARNING: All illegal access operations will be denied in a future release\n",
+      "Setting default log level to \"WARN\".\n",
+      "To adjust logging level use sc.setLogLevel(newLevel). For SparkR, use setLogLevel(newLevel).\n",
+      "Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n"
+     ]
+    }
+   ],
    "source": [
     "#pysparkに必要なライブラリを読み込む\n",
     "from pyspark import SparkConf\n",
@@ -79,9 +98,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "HiveConf of name hive.stats.jdbc.timeout does not exist\n",
+      "HiveConf of name hive.stats.retries.wait does not exist\n",
+      "Tue Nov 23 10:54:09 JST 2021 WARN: Establishing SSL connection without server's identity verification is not recommended. According to MySQL 5.5.45+, 5.6.26+ and 5.7.6+ requirements SSL connection must be established by default if explicit option isn't set. For compliance with existing applications not using SSL the verifyServerCertificate property is set to 'false'. You need either to explicitly disable SSL by setting useSSL=false, or set useSSL=true and provide truststore for server certificate verification.\n",
+      "Tue Nov 23 10:54:09 JST 2021 WARN: Establishing SSL connection without server's identity verification is not recommended. According to MySQL 5.5.45+, 5.6.26+ and 5.7.6+ requirements SSL connection must be established by default if explicit option isn't set. For compliance with existing applications not using SSL the verifyServerCertificate property is set to 'false'. You need either to explicitly disable SSL by setting useSSL=false, or set useSSL=true and provide truststore for server certificate verification.\n",
+      "Tue Nov 23 10:54:09 JST 2021 WARN: Establishing SSL connection without server's identity verification is not recommended. According to MySQL 5.5.45+, 5.6.26+ and 5.7.6+ requirements SSL connection must be established by default if explicit option isn't set. For compliance with existing applications not using SSL the verifyServerCertificate property is set to 'false'. You need either to explicitly disable SSL by setting useSSL=false, or set useSSL=true and provide truststore for server certificate verification.\n",
+      "Tue Nov 23 10:54:09 JST 2021 WARN: Establishing SSL connection without server's identity verification is not recommended. According to MySQL 5.5.45+, 5.6.26+ and 5.7.6+ requirements SSL connection must be established by default if explicit option isn't set. For compliance with existing applications not using SSL the verifyServerCertificate property is set to 'false'. You need either to explicitly disable SSL by setting useSSL=false, or set useSSL=true and provide truststore for server certificate verification.\n",
+      "Tue Nov 23 10:54:09 JST 2021 WARN: Establishing SSL connection without server's identity verification is not recommended. According to MySQL 5.5.45+, 5.6.26+ and 5.7.6+ requirements SSL connection must be established by default if explicit option isn't set. For compliance with existing applications not using SSL the verifyServerCertificate property is set to 'false'. You need either to explicitly disable SSL by setting useSSL=false, or set useSSL=true and provide truststore for server certificate verification.\n",
+      "Tue Nov 23 10:54:09 JST 2021 WARN: Establishing SSL connection without server's identity verification is not recommended. According to MySQL 5.5.45+, 5.6.26+ and 5.7.6+ requirements SSL connection must be established by default if explicit option isn't set. For compliance with existing applications not using SSL the verifyServerCertificate property is set to 'false'. You need either to explicitly disable SSL by setting useSSL=false, or set useSSL=true and provide truststore for server certificate verification.\n",
+      "Tue Nov 23 10:54:10 JST 2021 WARN: Establishing SSL connection without server's identity verification is not recommended. According to MySQL 5.5.45+, 5.6.26+ and 5.7.6+ requirements SSL connection must be established by default if explicit option isn't set. For compliance with existing applications not using SSL the verifyServerCertificate property is set to 'false'. You need either to explicitly disable SSL by setting useSSL=false, or set useSSL=true and provide truststore for server certificate verification.\n",
+      "Tue Nov 23 10:54:10 JST 2021 WARN: Establishing SSL connection without server's identity verification is not recommended. According to MySQL 5.5.45+, 5.6.26+ and 5.7.6+ requirements SSL connection must be established by default if explicit option isn't set. For compliance with existing applications not using SSL the verifyServerCertificate property is set to 'false'. You need either to explicitly disable SSL by setting useSSL=false, or set useSSL=true and provide truststore for server certificate verification.\n",
+      "Failed to get database global_temp, returning NoSuchObjectException\n"
+     ]
+    }
+   ],
    "source": [
     "# メタデータ取得対象のデータを取得する\n",
     "# 前のチャプターで「データベース名」「テーブル名」「テーブル定義」「サマリー」を登録したテーブルを取得します\n",
@@ -114,9 +151,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "METASTORE_FILTER_HOOK will be ignored, since hive.security.authorization.manager is set to instance of HiveAuthorizerFactory.\n",
+      "HiveConf of name hive.internal.ss.authz.settings.applied.marker does not exist\n",
+      "HiveConf of name hive.stats.jdbc.timeout does not exist\n",
+      "HiveConf of name hive.stats.retries.wait does not exist\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+-------+\n",
+      "|row_num|\n",
+      "+-------+\n",
+      "|    300|\n",
+      "+-------+\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# 件数の取得\n",
     "spark.sql(\"REFRESH TABLE data_management_crush_course.jinko_table \")\n",
@@ -129,28 +189,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+----------+\n",
+      "|       sum|\n",
+      "+----------+\n",
+      "|2277082041|\n",
+      "+----------+\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": []
+    }
+   ],
    "source": [
     "# 平均と合計値\n",
     "# 今回は平均として、女性と男性の合計値の平均をとっていこうと思います。\n",
-    "spark.sql(\"REFRESH TABLE data_management_cruch_course.jinko_table \")\n",
-    "sum=spark.sql(\"select cast(sum(jinko_male)+sum(jinko_femail) as decimal(19, 0)) as sum from data_management_cruch_course.jinko_table \")\n",
+    "spark.sql(\"REFRESH TABLE data_management_crush_course.jinko_table \")\n",
+    "sum=spark.sql(\"select cast(sum(jinko_male)+sum(jinko_femail) as decimal(19, 0)) as sum from data_management_crush_course.jinko_table \")\n",
     "# decimalにcastしないと数値が指数表記になってみづらくなるのでdecimalにしています。\n",
     "sum.show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+---------------+\n",
+      "|            avg|\n",
+      "+---------------+\n",
+      "|2277082041.0000|\n",
+      "+---------------+\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# 平均と合計値\n",
     "# 今回は平均として、女性と男性の合計値の平均をとっていこうと思います。\n",
-    "spark.sql(\"REFRESH TABLE data_management_cruch_course.jinko_table \")\n",
-    "avg=spark.sql(\"select avg(sum) as avg from (select cast(sum(jinko_male)+sum(jinko_femail) as decimal(19, 0)) as sum from data_management_cruch_course.jinko_table) \")\n",
+    "spark.sql(\"REFRESH TABLE data_management_crush_course.jinko_table \")\n",
+    "avg=spark.sql(\"select avg(sum) as avg from (select cast(sum(jinko_male)+sum(jinko_femail) as decimal(19, 0)) as sum from data_management_crush_course.jinko_table) \")\n",
     "avg.show()"
    ]
   },
@@ -194,16 +285,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Truncated the string representation of a plan since it was too large. This behavior can be adjusted by setting 'spark.sql.debug.maxToStringFields'.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+----------------+-----------------+------------------+-------------------+---------------+-----------------+----------------------+------------------------+------------------+\n",
+      "|cardinaryty_code|cardinaryty_gengo|cardinaryty_wareki|cardinaryty_seireki|cardinaryty_chu|cardinaryty_sokei|cardinaryty_jinko_male|cardinaryty_jinko_femail|cardinaryty_kenmei|\n",
+      "+----------------+-----------------+------------------+-------------------+---------------+-----------------+----------------------+------------------------+------------------+\n",
+      "|            0.17|             0.00|              0.02|               0.02|           0.00|             1.01|                  0.97|                    1.07|              0.16|\n",
+      "+----------------+-----------------+------------------+-------------------+---------------+-----------------+----------------------+------------------------+------------------+\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "from pyspark.sql.functions import approx_count_distinct\n",
     "from pyspark.sql.types import DecimalType\n",
     "\n",
     "# カーディナリティとセレクティビティはほぼ同時に出力することができます\n",
     "# 今回はkenmeiについてかーディなりティを測ってみます\n",
-    "card=spark.sql(\"select * from data_management_cruch_course.jinko_table\")\n",
+    "card=spark.sql(\"select * from data_management_crush_course.jinko_table\")\n",
     "\n",
     "cols_cardinality = card.select([(approx_count_distinct(c)/card.count()).cast(DecimalType(38,2)).alias(\"cardinaryty_\"+c) for c in card.columns])\n",
     "\n",
@@ -216,13 +327,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+----------------+-----------------+------------------+-------------------+---------------+-----------------+----------------------+------------------------+------------------+\n",
+      "|cardinaryty_code|cardinaryty_gengo|cardinaryty_wareki|cardinaryty_seireki|cardinaryty_chu|cardinaryty_sokei|cardinaryty_jinko_male|cardinaryty_jinko_femail|cardinaryty_kenmei|\n",
+      "+----------------+-----------------+------------------+-------------------+---------------+-----------------+----------------------+------------------------+------------------+\n",
+      "|            1.00|             1.00|              6.00|               6.00|           0.00|             6.00|                  6.00|                    6.00|              1.00|\n",
+      "+----------------+-----------------+------------------+-------------------+---------------+-----------------+----------------------+------------------------+------------------+\n",
+      "\n",
+      "6.00\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "#　セレクティビティはキーを指定した場合（今回の場合はkenmei）レコードの返却はどれくらいであるかを想定するものです\n",
-    "card=spark.sql(\"select * from data_management_cruch_course.jinko_table where kenmei='東京都'\")\n",
+    "card=spark.sql(\"select * from data_management_crush_course.jinko_table where kenmei='東京都'\")\n",
     "\n",
     "cols_selctivity = card.select([(approx_count_distinct(c)).cast(DecimalType(38,2)).alias(\"cardinaryty_\"+c) for c in card.columns])\n",
     "\n",
@@ -281,9 +406,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "294\n",
+      "50\n",
+      "False\n"
+     ]
+    }
+   ],
    "source": [
     "# 一貫しているかどうかを判定するためには集合演算を使います\n",
     "\n",
@@ -328,9 +463,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+--------------------+-----------+--------------------+--------------------------------------+----------+-----------+----------------+----------------+\n",
+      "|       database_name| table_name|    table_definition|                               sammary|record_num|selectivity|consistency_flag|frequency_access|\n",
+      "+--------------------+-----------+--------------------+--------------------------------------+----------+-----------+----------------+----------------+\n",
+      "|data_management_c...|jinko_table|CREATE TABLE `dat...|一旦テーブルの説明は空にしておきます。|       300|       6.00|           false|            null|\n",
+      "+--------------------+-----------+--------------------+--------------------------------------+----------+-----------+----------------+----------------+\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "from pyspark.sql.functions import when\n",
@@ -346,9 +494,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "DataFrame[]"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#取得したデータをmetadata_tmp.sample_metadataに格納していきます\n",
     "#読み込んだテーブルに対して直接データを入れることができないので、一度ファイルを吐き出します\n",
@@ -369,15 +528,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Mon Nov 22 22:32:31 JST 2021 WARN: Establishing SSL connection without server's identity verification is not recommended. According to MySQL 5.5.45+, 5.6.26+ and 5.7.6+ requirements SSL connection must be established by default if explicit option isn't set. For compliance with existing applications not using SSL the verifyServerCertificate property is set to 'false'. You need either to explicitly disable SSL by setting useSSL=false, or set useSSL=true and provide truststore for server certificate verification.\n",
-      "Mon Nov 22 22:32:31 JST 2021 WARN: Establishing SSL connection without server's identity verification is not recommended. According to MySQL 5.5.45+, 5.6.26+ and 5.7.6+ requirements SSL connection must be established by default if explicit option isn't set. For compliance with existing applications not using SSL the verifyServerCertificate property is set to 'false'. You need either to explicitly disable SSL by setting useSSL=false, or set useSSL=true and provide truststore for server certificate verification.\n"
+      "+--------------------+-----------+--------------------+--------------------------------------+----------+-----------+----------------+----------------+\n",
+      "|       database_name| table_name|    table_definition|                               sammary|record_num|selectivity|consistency_flag|frequency_access|\n",
+      "+--------------------+-----------+--------------------+--------------------------------------+----------+-----------+----------------+----------------+\n",
+      "|data_management_c...|jinko_table|CREATE TABLE `dat...|一旦テーブルの説明は空にしておきます。|       300|       6.00|           false|            null|\n",
+      "+--------------------+-----------+--------------------+--------------------------------------+----------+-----------+----------------+----------------+\n",
+      "\n"
      ]
     }
    ],
