--- a/セクション6.ipynb
+++ b/セクション6.ipynb
@@ -149,7 +149,7 @@
     }
    ],
    "source": [
-    "# INFO  - ugi=saitouyuuki ip=unknown-ip-addr      cmd=get_partitions : db=data_management_crush_course tbl=jinko_tabl\n",
+    "# 21/11/23 10@55@01 INFO audit: ugi=saitouyuuki   ip=unknown-ip-addr      cmd=get_partitions : db=data_management_crush_course tbl=jinko_table\n",
     "from pyspark.sql.functions import split, col\n",
     "df=spark.read.text(\"/Users/saitouyuuki/Desktop/src/pyspark_dataprofiling_dataquality/logfiles/spark_operation.log.1\")\n",
     "df.withColumn(\"tmp\", split(df.value,\"\\s\")).select(col(\"tmp\").getItem(3)).show()"
